--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ img {
 
 a {
   text-align: center;
-  display: block;
+  display: inline-block;
   padding: 0px 10px;
   background-color: gray;
 }
