--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ img {
 }
 
 nav a {
-  display: inline;
+  display: inline-block;
   text-align: center;
   padding: 0px 10px;
   background-color: gray;
