Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ img {
 }
 
 nav a {
-  display: inline-block;
+  float: left;
   text-align: center;
   padding: 0px 10px;
   background-color: gray;
