--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ figcaption {
   font-size: 10px;
 }
 
-#featured-property {
+#featured-property p {
   width: 800px;
   text-align: center;
   display: block;
