--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ figcaption {
 
 #featured-property p {
   width: 800px;
-  text-align: center;
+  margin: 0 auto;
   display: block;
   margin: auto;
 }
