--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ figcaption {
 
 #featured-property p {
   width: 800px;
+  text-align: center;
   margin: 0 auto;
-  display: block;
-  margin: auto;
 }
