--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ figcaption {
 }
 
 #details {
+  display: block;
+  float: left;
   background-color: red;
   text-align: center;
   margin: 0 auto;
